[gd_scene load_steps=8 format=3 uid="uid://b8ex7hh6o24ci"]

[ext_resource type="Script" uid="uid://fnimod1txx50" path="res://Scripts/player.gd" id="1_gntrk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0rwas"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xhfnw"]
material = SubResource("StandardMaterial3D_0rwas")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rpqav"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kyqiw"]
material = SubResource("StandardMaterial3D_rpqav")
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rpqav"]
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kpjcp"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_gntrk")

[node name="playerVisuals" type="Node3D" parent="."]

[node name="player_standingMesh" type="MeshInstance3D" parent="playerVisuals"]
mesh = SubResource("CapsuleMesh_xhfnw")
skeleton = NodePath("../..")

[node name="player_crouchingMesh" type="MeshInstance3D" parent="playerVisuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.40050423, 0)
visible = false
mesh = SubResource("CapsuleMesh_kyqiw")

[node name="cameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="cameraSpringarm" type="SpringArm3D" parent="cameraMount"]
spring_length = 5.0
margin = 0.02

[node name="camera" type="Camera3D" parent="cameraMount/cameraSpringarm"]

[node name="player_crouchingCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.40284178, 0)
visible = false
shape = SubResource("CapsuleShape3D_rpqav")

[node name="player_standingCol" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kpjcp")

[node name="uncrouch_checker" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.1, 0)

[node name="fpslabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
